--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,8 @@ target_link_libraries(${PROJECT_NAME} stdc++fs ${PCL_LIBRARIES})
 add_executable(fastlio_localization_ros1 src/ros1_main.cpp)
 target_link_libraries(fastlio_localization_ros1 ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
-add_executable(fastlio_localization_test_bag test/read_rosbag_test.cpp)
-target_link_libraries(fastlio_localization_test_bag ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES})
+add_executable(fastlio_localization_test_bag_lcalization test/read_rosbag_test_lcalization.cpp)
+target_link_libraries(fastlio_localization_test_bag_lcalization ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
 add_executable(fastlio_localization_test_bag_relcalization test/read_rosbag_test_relcalization.cpp)
 target_link_libraries(fastlio_localization_test_bag_relcalization ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES})
