--- a/config/localization_dev.yaml
+++ b/config/localization_dev.yaml
@@ -10,7 +10,7 @@ preprocess:
     scan_line: 16
     scan_rate: 10                # only need to be set for velodyne, unit: Hz,
     timestamp_unit: 0            # the unit of time/t field in the PointCloud2 rostopic: 0-second, 1-milisecond, 2-microsecond, 3-nanosecond.
-    blind: 1
+    blind: 2
     det_range: 200.0
 
 mapping:
@@ -28,13 +28,17 @@ mapping:
     b_acc_cov: 0.0001
     b_gyr_cov: 0.0001
     extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    extrinsic_T: [ -0.00665, 0, -1.51277]
+    # extrinsic_T: [ -0.00665, 0, -1.51277]
+    # extrinsic_R: [ 1, 0, 0, 
+    #                0, -1, 0, 
+    #                0, 0, -1 ]
+    extrinsic_T: [ 1.061, 0, 1.651 ]
     extrinsic_R: [ 1, 0, 0, 
-                   0, -1, 0, 
-                   0, 0, -1 ]
+                   0, 1, 0, 
+                   0, 0, 1 ]
 
 localization:
-    gravity: [ 0.0889961, 0.110843, 9.80797 ]
+    gravity: [ 0.0, 0.0, -9.81 ]
 
 publish:
     path_en:  true
@@ -47,10 +51,10 @@ relocalization_cfg:
     # algorithm_type: "manually_set"
 
     # lidar extrinsic to imu
-    lidar_ext/x: -0.00665
+    lidar_ext/x: 1.061
     lidar_ext/y: 0
-    lidar_ext/z: -1.51277
-    lidar_ext/roll: 180
+    lidar_ext/z: 1.651
+    lidar_ext/roll: 0
     lidar_ext/pitch: 0
     lidar_ext/yaw: 0
 
