--- a/config/localization_dev.yaml
+++ b/config/localization_dev.yaml
@@ -9,6 +9,7 @@ preprocess:
     lidar_type: 2                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
     scan_line: 16
     scan_rate: 10                # only need to be set for velodyne, unit: Hz,
+    imu_rate: 100                # only need to be set for imu, unit: Hz,
     timestamp_unit: 0            # the unit of time/t field in the PointCloud2 rostopic: 0-second, 1-milisecond, 2-microsecond, 3-nanosecond.
     blind: 2
     det_range: 200.0
