--- a/config/localization_dev.yaml
+++ b/config/localization_dev.yaml
@@ -55,6 +55,7 @@ publish:
 
 official:
     # map_path: "/ant_robot/data/map/"
+    relocate_use_last_pose: true
     # last_pose_record_path: "/home/will/last_pose_record.txt"
     location_log_enable: false
     # location_log_save_path: "/home/will/location.log"
