--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -8,8 +8,8 @@ common:
 preprocess:
     lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
     scan_line: 6
-    blind: 0.1
-    det_range: 450.0
+    blind: 1
+    det_range: 70.0
 
 mapping:
     start_in_aggressive_motion: false   # if true, a preknown gravity should be provided in following gravity_init
@@ -34,8 +34,8 @@ mapping:
     b_acc_cov: 0.0001
     b_gyr_cov: 0.0001
     extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic
-    extrinsic_T: [ 0.04165, 0.02326, -0.0284 ]  # avia
-    # extrinsic_T: [ -0.011, -0.02329, 0.04412 ]  # mid360
+    # extrinsic_T: [ 0.04165, 0.02326, -0.0284 ]  # avia
+    extrinsic_T: [ -0.011, -0.02329, 0.04412 ]  # mid360
     extrinsic_R: [ 1, 0, 0,
                    0, 1, 0,
                    0, 0, 1]
@@ -52,20 +52,20 @@ publish:
 
 official:
     # map_path: "/robot/data/map/"
-    relocate_use_last_pose: false
+    relocate_use_last_pose: true
     # last_pose_record_path: "/home/will/last_pose_record.txt"
     location_log_enable: false
     # location_log_save_path: "/home/will/location.log"
 
 # ============relocalization_cfg============
 relocalization_cfg:
-    # algorithm_type: "scan_context"
-    algorithm_type: "manually_set"
+    algorithm_type: "scan_context"
+    # algorithm_type: "manually_set"
 
     # lidar extrinsic to imu
-    lidar_ext/x: 0.04165
-    lidar_ext/y: 0.02326
-    lidar_ext/z: -0.0284
+    lidar_ext/x: -0.011
+    lidar_ext/y: -0.02329
+    lidar_ext/z: 0.04412
     lidar_ext/roll: 0
     lidar_ext/pitch: 0
     lidar_ext/yaw: 0
