--- a/config/ouster64.yaml
+++ b/config/ouster64.yaml
@@ -48,8 +48,64 @@ publish:
     path_en:  true
     scan_publish_en:  true       # false: close all the point cloud output
     dense_publish_en: true       # false: low down the points number in a global-frame point clouds scan.
+    tf_broadcast: false
 
 official:
-    save_globalmap_en: true
-    save_resolution: 0.1
-    save_keyframe_en: false
+    # map_path: "/robot/data/map/"
+    relocate_use_last_pose: false
+    # last_pose_record_path: "/home/will/last_pose_record.txt"
+    location_log_enable: false
+    # location_log_save_path: "/home/will/location.log"
+
+# ============relocalization_cfg============
+relocalization_cfg:
+    algorithm_type: "scan_context"
+    # algorithm_type: "manually_set"
+
+    # lidar extrinsic to imu
+    lidar_ext/x: 0
+    lidar_ext/y: 0
+    lidar_ext/z: 0
+    lidar_ext/roll: 0
+    lidar_ext/pitch: 0
+    lidar_ext/yaw: 0
+
+utm_origin:
+    zone: "51N"
+    east: 536808.26993
+    north: 4501498.61740
+    up: 44.21500
+
+scan_context:
+    lidar_height: 2.183
+    sc_dist_thres: 0.7
+
+bnb3d:
+    linear_xy_window_size: 5   # meter
+    linear_z_window_size: 0.5  # meter
+    angular_search_window: 180  # degree 0~180
+    pc_resolutions: [0.3, 0.5, 0.8]
+    bnb_depth: 3
+    min_score: 0.3
+    enough_score: 0.7
+
+    min_xy_resolution: 0.2
+    min_z_resolution: 0.1
+    min_angular_resolution: 5   # degree
+
+    thread_num: 6
+    filter_size_scan: 0.2
+    debug_mode: false
+
+ndt:
+    step_size: 0.1
+    resolution: 1
+
+gicp:
+    use_gicp: false
+    filter_range: 80.0
+    gicp_downsample: 0.1
+    search_radius: 0.5
+    teps: 1.0e-4
+    feps: 0.001
+    fitness_score: 0.3
