--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -52,7 +52,7 @@ publish:
 
 official:
     # map_path: "/robot/data/map/"
-    relocate_use_last_pose: true
+    relocate_use_last_pose: false
     # last_pose_record_path: "/home/will/last_pose_record.txt"
     location_log_enable: false
     # location_log_save_path: "/home/will/location.log"
