--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,19 +21,28 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)|(aarch32)|(AARCH3
   include(ProcessorCount)
   ProcessorCount(N)
   message("Processer number:  ${N}")
-  if(N GREATER 4)
+  if(N GREATER 6)
     add_definitions(-DMP_EN)
     add_definitions(-DMP_PROC_NUM=4)
+    add_definitions(-DBNB_PROC_NUM=6)
+    message("core for MP: 4")
+  elseif(N GREATER 4)
+    add_definitions(-DMP_EN)
+    add_definitions(-DMP_PROC_NUM=4)
+    add_definitions(-DBNB_PROC_NUM=4)
     message("core for MP: 4")
   elseif(N GREATER 3)
     add_definitions(-DMP_EN)
     add_definitions(-DMP_PROC_NUM=3)
+    add_definitions(-DBNB_PROC_NUM=3)
     message("core for MP: 3")
   else()
     add_definitions(-DMP_PROC_NUM=1)
+    add_definitions(-DBNB_PROC_NUM=2)
   endif()
 else()
   add_definitions(-DMP_PROC_NUM=1)
+  add_definitions(-DBNB_PROC_NUM=2)
 endif()
 
 find_package(OpenMP QUIET)
