--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ else(ROS_EDITION STREQUAL "ROS2")
   find_package(sensor_msgs REQUIRED)
   find_package(tf2_ros REQUIRED)
   find_package(livox_ros_driver2 REQUIRED)
+  find_package(slam_interfaces REQUIRED)
 
   find_package(Eigen3 REQUIRED)
   find_package(PCL 1.8 REQUIRED)
