--- a/config/localization_dev.yaml
+++ b/config/localization_dev.yaml
@@ -68,6 +68,8 @@ official:
 relocalization_cfg:
     algorithm_type: "scan_context"
     # algorithm_type: "manually_set"
+    lidar_turnover_roll: 0
+    lidar_turnover_pitch: 0
 
 utm_origin:
     zone: "51N"
