--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -62,6 +62,8 @@ official:
 relocalization_cfg:
     algorithm_type: "scan_context"
     # algorithm_type: "manually_set"
+    lidar_turnover_roll: 180
+    lidar_turnover_pitch: 0
 
 utm_origin:
     zone: "51N"
