--- a/config/UrbanLoco_CA.yaml
+++ b/config/UrbanLoco_CA.yaml
@@ -11,26 +11,25 @@ preprocess:
     lidar_type: 2                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
     scan_line: 32
     scan_rate: 10                # only need to be set for velodyne, unit: Hz,
+    imu_rate: 100                # only need to be set for imu, unit: Hz,
     timestamp_unit: 2            # the unit of time/t field in the PointCloud2 rostopic: 0-second, 1-milisecond, 2-microsecond, 3-nanosecond.
     blind: 2
-    det_range: 200.0
+    det_range: 100.0
+    imu_meas_check: [3, 3, 3, 20, 20, 50] # rad/s, m/s^2
 
 mapping:
-    gravity_align: true                 # true to align the z axis of world frame with the direction of gravity, and the gravity direction should be specified below
-    gravity_init: [0, 0, -9.81]         # gravity to be aligned
-    eular_init: [0, 0, 0]             # imu init rotation, for fix imu measure
+    gravity_init: [0, 0, -9.81]         # [0.0, 9.810, 0.0] # preknown gravity in the first IMU body frame, use when imu_en is false or start from a non-stationary state
     frontend_type: 0                    # frontend type
 
     # fastlio
     point_skip_num: 4            # for mapping, Increase accuracy 4 -> 1
     space_down_sample: true
-    # surf_frame_ds_res: 0.1       # for indoor, when the ceiling features are more than the floor features after downsampling
     surf_frame_ds_res: 0.5       # In unstructured scenarios, smaller is more likely to degenerate
     max_iteration: 3
     ikdtree_resolution: 0.5      # In unstructured scenarios, smaller is more likely to degenerate
     lidar_model_search_range: 5
     lidar_meas_cov: 0.001
-    cube_side_length: 1000
+    cube_side_length: 10000
     runtime_log_enable: 0
 
     acc_cov: 0.1
