--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if(ROS_EDITION STREQUAL "ROS1")
     tf
     livox_ros_driver
     eigen_conversions
-    # slam_interfaces
+    slam_interfaces
   )
 
   find_package(Eigen3 REQUIRED)
@@ -122,6 +122,7 @@ else(ROS_EDITION STREQUAL "ROS2")
   find_package(pcl_conversions REQUIRED)
   find_package(tf2_ros REQUIRED)
   find_package(livox_ros_driver2 REQUIRED)
+  find_package(slam_interfaces REQUIRED)
 
   find_package(Eigen3 REQUIRED)
   find_package(PCL 1.8 REQUIRED)
