--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <build_depend>tf</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>livox_ros_driver</build_depend>
+  <build_depend>slam_interfaces</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -31,6 +32,7 @@
   <run_depend>tf</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>livox_ros_driver</run_depend>
+  <run_depend>slam_interfaces</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>rosbag</test_depend>
