--- a/config/UrbanLoco_HK.yaml
+++ b/config/UrbanLoco_HK.yaml
@@ -38,7 +38,7 @@ mapping:
     b_acc_cov: 0.0001
     b_gyr_cov: 0.0001
     extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    # lidar -> imu
+    # lidar -> imu = lidar->base * base->imu
     extrinsic_T: [ 0, 0, 0.28 ]
     extrinsic_R: [ 0, 1, 0, 
                    -1, 0, 0, 
