--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -52,6 +52,7 @@ publish:
     imu_tf_broadcast: false
 
 official:
+    lla: [31.4200590, 120.6394099, 14.790]
     # map_path: "/robot/data/map/"
     relocate_use_last_pose: false
     # last_pose_record_path: "/home/will/last_pose_record.txt"
