--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,17 @@ find_package(OpenMP QUIET)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
+option(BUILD_CUDA "Build GPU ver" ON)
+find_package(cpu_bbs3d REQUIRED)
+
+if (BUILD_CUDA)
+  find_package(gpu_bbs3d REQUIRED)
+  find_package(CUDA REQUIRED)
+  include_directories(${CUDA_INCLUDE_DIRS})
+  link_directories(${CUDA_LIBRARY_DIRS})
+endif()
+
 if(ROS_EDITION STREQUAL "ROS1")
   find_package(catkin REQUIRED COMPONENTS
     geometry_msgs
@@ -92,6 +103,10 @@ if(ROS_EDITION STREQUAL "ROS1")
 
   add_executable(fastlio_localization_ros1 src/ros1_main.cpp)
   target_link_libraries(fastlio_localization_ros1 ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+  target_link_libraries(fastlio_localization_ros1 ${cpu_bbs3d_LIBRARY})
+  if(BUILD_CUDA)
+    target_link_libraries(fastlio_localization_ros1 ${gpu_bbs3d_LIBRARY})
+  endif()
 
   add_executable(fastlio_localization_test_bag_lcalization test/read_rosbag_test_lcalization.cpp)
   target_link_libraries(fastlio_localization_test_bag_lcalization ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
@@ -157,6 +172,10 @@ else(ROS_EDITION STREQUAL "ROS2")
     include/system/frontend/use-ikfom.cpp
     include/system/System.hpp)
   target_link_libraries(fastlio_localization_ros2 stdc++fs ${PCL_LIBRARIES})
+  target_link_libraries(fastlio_localization_ros2 ${cpu_bbs3d_LIBRARY})
+  if(BUILD_CUDA)
+    target_link_libraries(fastlio_localization_ros2 ${gpu_bbs3d_LIBRARY})
+  endif()
   ament_target_dependencies(fastlio_localization_ros2 rclcpp sensor_msgs nav_msgs tf2_ros livox_ros_driver2)
 
   # add_executable(fastlio_sam_test_bag test/read_rosbag_test.cpp)
