--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,15 +50,16 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
-set(BUILD_CUDA ON)
-find_package(cpu_bbs3d REQUIRED)
 
+set(BUILD_CUDA OFF)
 if (BUILD_CUDA)
   add_definitions(-DUSE_CUDA)
   find_package(gpu_bbs3d REQUIRED)
   find_package(CUDA REQUIRED)
   include_directories(${CUDA_INCLUDE_DIRS})
   link_directories(${CUDA_LIBRARY_DIRS})
+else()
+  find_package(cpu_bbs3d REQUIRED)
 endif()
 
 if(ROS_EDITION STREQUAL "ROS1")
@@ -104,23 +105,26 @@ if(ROS_EDITION STREQUAL "ROS1")
 
   add_executable(fastlio_localization_ros1 src/ros1_main.cpp)
   target_link_libraries(fastlio_localization_ros1 ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES})
-  target_link_libraries(fastlio_localization_ros1 ${cpu_bbs3d_LIBRARY})
   if(BUILD_CUDA)
     target_link_libraries(fastlio_localization_ros1 ${gpu_bbs3d_LIBRARY})
+  else()
+    target_link_libraries(fastlio_localization_ros1 ${cpu_bbs3d_LIBRARY})
   endif()
 
   add_executable(fastlio_localization_test_bag_lcalization test/read_rosbag_test_lcalization.cpp)
   target_link_libraries(fastlio_localization_test_bag_lcalization ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
-  target_link_libraries(fastlio_localization_test_bag_lcalization ${cpu_bbs3d_LIBRARY})
   if(BUILD_CUDA)
     target_link_libraries(fastlio_localization_test_bag_lcalization ${gpu_bbs3d_LIBRARY})
+  else()
+    target_link_libraries(fastlio_localization_test_bag_lcalization ${cpu_bbs3d_LIBRARY})
   endif()
 
   add_executable(fastlio_localization_test_bag_relcalization test/read_rosbag_test_relcalization.cpp)
   target_link_libraries(fastlio_localization_test_bag_relcalization ${PROJECT_NAME} ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES})
-  target_link_libraries(fastlio_localization_test_bag_relcalization ${cpu_bbs3d_LIBRARY})
   if(BUILD_CUDA)
     target_link_libraries(fastlio_localization_test_bag_relcalization ${gpu_bbs3d_LIBRARY})
+  else()
+    target_link_libraries(fastlio_localization_test_bag_relcalization ${cpu_bbs3d_LIBRARY})
   endif()
 
   install(TARGETS ${PROJECT_NAME} fastlio_localization_ros1
@@ -181,9 +185,10 @@ else(ROS_EDITION STREQUAL "ROS2")
     include/system/frontend/use-ikfom.cpp
     include/system/System.hpp)
   target_link_libraries(fastlio_localization_ros2 stdc++fs ${PCL_LIBRARIES})
-  target_link_libraries(fastlio_localization_ros2 ${cpu_bbs3d_LIBRARY})
   if(BUILD_CUDA)
     target_link_libraries(fastlio_localization_ros2 ${gpu_bbs3d_LIBRARY})
+  else()
+    target_link_libraries(fastlio_localization_ros2 ${cpu_bbs3d_LIBRARY})
   endif()
   ament_target_dependencies(fastlio_localization_ros2 rclcpp sensor_msgs nav_msgs tf2_ros livox_ros_driver2)
 
