--- a/config/mid360.yaml
+++ b/config/mid360.yaml
@@ -1,6 +1,7 @@
 common:
     lidar_topic:  "/livox/lidar"
     imu_topic:  "/livox/imu"
+    gnss_topic:  "/rtk_ins"
     map_frame:  "map"
     lidar_frame:  "lidar"
     baselink_frame:  "base_link"
@@ -9,19 +10,23 @@ common:
 preprocess:
     lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
     scan_line: 6
-    blind: 0.1
+    scan_rate: 10                # only need to be set for velodyne, unit: Hz,
+    imu_rate: 200                # only need to be set for imu, unit: Hz,
+    timestamp_unit: 2            # the unit of time/t field in the PointCloud2 rostopic: 0-second, 1-milisecond, 2-microsecond, 3-nanosecond.
+    blind: 3
     det_range: 70.0
+    # imu_meas_check: [3, 3, 3, 20, 20, 50] # rad/s, m/s^2
 
 mapping:
     gravity_init: [0, 0, -9.81]         # [0.0, 9.810, 0.0] # preknown gravity in the first IMU body frame, use when imu_en is false or start from a non-stationary state
     frontend_type: 0                    # frontend type
 
     # fastlio
-    point_skip_num: 4
+    point_skip_num: 4            # for mapping, Increase accuracy 4 -> 1
     space_down_sample: true
-    surf_frame_ds_res: 0.5
+    surf_frame_ds_res: 0.5       # In unstructured scenarios, smaller is more likely to degenerate
     max_iteration: 3
-    ikdtree_resolution: 0.5
+    ikdtree_resolution: 0.5      # In unstructured scenarios, smaller is more likely to degenerate
     lidar_model_search_range: 5
     lidar_meas_cov: 0.001
     cube_side_length: 1000
@@ -61,6 +66,7 @@ official:
 
 # ============relocalization_cfg============
 relocalization_cfg:
+    # algorithm_type: "bbs3d"
     algorithm_type: "scan_context"
     # algorithm_type: "manually_set"
     lidar_turnover_roll: 180
